--- a/.github/workflows/terraform-pipeline.yml
+++ b/.github/workflows/terraform-pipeline.yml
@@ -45,14 +45,14 @@ jobs:
       - name: Terraform Plan
         env:
           TF_TOKEN_app_terraform_io: ${{ secrets.TF_API_TOKEN }}
-        run: terraform plan -var-file="environments/${{ github.event.inputs.environment }}.tfvars"
+        run: terraform plan
 
       # Terraform Apply
       - name: Terraform Apply
         if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
         env:
           TF_TOKEN_app_terraform_io: ${{ secrets.TF_API_TOKEN }}
-        run: terraform apply -var-file="environments/${{ github.event.inputs.environment }}.tfvars" -auto-approve
+        run: terraform apply -auto-approve
 
       # Run Schema Initialization
       - name: Initialize Schema
